tests/NormalTests/paczka1/fuzzy1/78485612.err
Error in line 2: VuTe8M S802 11,1
Error in line 3: VuTe8M A374 88,2
Error in line 12: A315 A374 88,1
Error in line 15: x4j5aqk86 A374 98,21
Error in line 21: x4j5aqk86 A315 44,2
Error in line 29: x4j5aqk86 A315 87,4
Error in line 34: A315 S802 26,7
